# cognis-harvest

./: .gitignore  CHANGELOG.md  NOTICE  README.md  RESULTS.md  pyproject.toml
bench/: __init__.py  benchmark.py  evaluate.py  metrics.py  results.json  run_all.py
cognis_harvest/: __init__.py  area.py  change.py  classify.py  cli.py  detect.py  geojson.py  spectral.py  synth.py  trends.py
data/: coefficients.json  sample_scene.json  training_samples.json
docs/: ARCHITECTURE.md  LIMITATIONS.md  METHODS.md  SOLIC_CA4_MAPPING.md
examples/: run_demo.py
terravue/: __init__.py  cli.py  report.py  yield_model.py
tests/: test_bench.py  test_change.py  test_classify.py  test_detect_area_yield.py  test_spectral.py  test_trends.py
