[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "terravue"
version = "0.2.0"
description = "AI/ML multi-modal illicit-crop detection & yield estimation (Terravue)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Cognis Digital LLC" }]
keywords = ["remote-sensing", "crop-detection", "counternarcotics", "geoint",
            "multispectral", "sar", "geojson", "cognis"]
license = { text = "COCL-1.0" }
dependencies = []

[project.urls]
Homepage = "https://cognis.digital"

[project.scripts]
terravue = "terravue.cli:main"

[tool.setuptools]
packages = ["terravue"]

[tool.pytest.ini_options]
testpaths = ["tests"]
